fix collapseSelectPlace padding-top

--- a/style/index.css
+++ b/style/index.css
@@ -331,6 +331,20 @@
     overflow-y: scroll; */
     padding: 20px;
 }
+#collapseSelectPlace {
+    position: relative;
+}
+#collapseSelectPlace::before {
+    content: '';
+    position: absolute;
+    top: 1px;
+    left: 6px;
+    right: 6px;
+    height: 20px;
+    z-index: 1;
+    background-color: #ffffff;
+    border-radius: 30px 30px 0 0;
+}
 .collapseSelectPlace-item {
     margin-top: 10px;
 }
